--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,7 +8,7 @@ font-size: 1.5rem;
 
 .mb-2{
 color: blue;
- 
+
 }
 
 h3 {
@@ -18,7 +18,11 @@ color: blue;
 }
 
 .sidebar {
+  position: fixed;
+
 width: 180px;
+height: 100%;
+border: 2px solid lightblue;
  }
 
 
@@ -30,4 +34,10 @@ width: 180px;
     height: 50px;
     margin-right: 1px;
     margin-top: 1px;
+}
+
+
+.b{
+  border: 1px solid lightblue;
+   
 }
