--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -10,13 +10,19 @@
         </a>
       </li>
 
-      <li class="nav-item">
-        <a href= <%= students_path %> class="nav-link px-2">
+      <li class="nav-item dropdown">
+        <a href= <%= students_path %> class="nav-link px-2 dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="material-icons icon">
-            pages
+            add
           </i>
           <span class="text">Student</span>
         </a>
+
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href=<%= students_path %>>All Students</a>
+           <a class="dropdown-item" href=<%= search_path %>>Search Students</a>
+
+        </div>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link px-2">
@@ -37,8 +43,6 @@
 
 
 
-
-
       <li class="nav-item">
         <a href="#" class="nav-link px-2">
           <i class="material-icons icon">
@@ -47,6 +51,21 @@
           <span class="text">Settings</span>
         </a>
       </li>
+
+
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown button
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+
+
+
 
 
 
