--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -13,7 +13,7 @@
       <li class="nav-item dropdown">
         <a href= <%= students_path %> class="nav-link px-2 dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="material-icons icon">
-            add
+            pages
           </i>
           <span class="text">Student</span>
         </a>
@@ -24,14 +24,28 @@
 
         </div>
       </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link px-2">
+
+      <li class="nav-item dropdown">
+        <a href= <%= students_path %> class="nav-link px-2 dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="material-icons icon">
             pages
           </i>
           <span class="text">Fee</span>
         </a>
+
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href=<%=  new_receipt_path %>>New Reciept</a>
+           <a class="dropdown-item" href=<%= search_path %>>Pending Fee</a>
+
+        </div>
       </li>
+
+
+
+
+
+
+     
 
       <li class="nav-item">
         <a href="#" class="nav-link px-2">
