--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,7 @@
 
 .navbar-brand {
 
+align-content: center;
 font-size: 1.5rem;
 
 }
@@ -18,7 +19,7 @@ color: blue;
 }
 
 .sidebar {
- 
+
 width: 180px;
 height: 100%;
 border: 2px solid lightblue;
@@ -27,11 +28,11 @@ border: 2px solid lightblue;
 
 
 .logo {
-    display: inline-block;
-    vertical-align: top;
-    width: 50px;
-    height: 50px;
-    margin-right: 1px;
+align-self: center;
+     vertical-align: top;
+    width: 60px;
+    height: 60px;
+    margin-right: 3px;
     margin-top: 1px;
 }
 
