--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -7,9 +7,9 @@
     </ol>
     <div class="card mb-4">
         <div class="card-body">
-          <%= form_tag import_students_path, multipart: true do %>
-            <%= file_field_tag :file %>
-            <%= submit_tag "Upload Students" %>
+          <%= form_tag import_students_path, multipart: true   do %>
+            <%= file_field_tag :file    %>
+            <%= submit_tag "Upload Students" ,   class: 'btn btn-primary  ' %>
           <% end %>
              .
         </div>
@@ -21,7 +21,7 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <table class="table table-bordered" id="dataTable1" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                           <th>name</th>
@@ -66,14 +66,17 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+  $(document).ready(function() {
 
 
-
-
-
-
-
-
-
-
- 
+    $('#dataTable1').DataTable( {
+          order: [[2, 'asc']],
+          rowGroup: {
+              dataSrc: 2
+          }
+      } );
+  });
+</script>
