--- a/app/views/students/search.html.erb
+++ b/app/views/students/search.html.erb
@@ -149,10 +149,12 @@
 
 
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 
 
 
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 
 
@@ -164,9 +166,3 @@
     });
   } );
 </script>
-
-
-
-
-
- 
