--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -1,4 +1,12 @@
 
+<div class="container-fluid">
+     <div style="height: 2vh;"></div>
+     <ol class="breadcrumb mb-4">
+         <li class="breadcrumb-item"><a href="index.html">Fee</a></li>
+         <li class="breadcrumb-item active">Generate Reciept</li>
+     </ol>
+
+ 
 <%= form_for @receipt   do |form| %>
 
 
@@ -139,3 +147,4 @@
 </div>
 <%= form.submit %>
 <% end %>
+</div>
