--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -27,7 +27,7 @@
                 </a>
                 <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                      <a class="nav-link" href=<%= students_path %>>Generate Receipt</a>
+                      <a class="nav-link" href=<%= new_receipt_path %>>Generate Receipt</a>
                       <a class="nav-link" href=<%= search_path %>>Print Receipt</a>
                     </nav>
                     <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
