--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -28,7 +28,8 @@
                 <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
                       <a class="nav-link" href=<%= new_receipt_path %>>Generate Receipt</a>
-                      <a class="nav-link" href=<%= search_path %>>Print Receipt</a>
+                      <a class="nav-link" href='#'>Unpaid Receipt</a>
+                        <a class="nav-link" href='#'>Print Receipt</a>
                     </nav>
                     <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
