--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -1,3 +1,54 @@
+<script>
+  $( function() {
+    var availableTags =  <%=raw @names  %>;
+    $( "#symbols2" ).autocomplete({
+      source: availableTags
+    });
+  } );
+
+
+  $(document).on("change", ".qty1", function() {
+    var sum = 0;
+    $(".qty1").each(function(){
+        sum += +$(this).val();
+    });
+    $(".total").val(sum);
+});
+
+</script>
+
+
+
+
+
+<div class="container-fluid">
+
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item"><a href="index.html">Fee</a></li>
+    <li class="breadcrumb-item active">Search  Student</li>
+</ol>
+<div class="card mb-4">
+    <div class="card-body">
+      <%= form_tag new_receipt_path, method: :get do %>
+   <div class='form-group row'>
+     <div class="col-sm-9">
+       <%= text_field_tag :name, params[:name], id: 'symbols2', class:'form-control form-control-lg' %>
+
+
+     </div>
+     <div class="col-sm-3">
+       <%= button_tag type: :submit , class: 'btn btn-success' do %>
+       <%= 'Search' %>
+       <% end %>
+     </div>
+         <% end %>
+   </div>
+    </div>
+</div>
+</div>
+
+<%  if @student %>
+
 
 <div class="container-fluid">
      <div style="height: 2vh;"></div>
@@ -6,7 +57,7 @@
          <li class="breadcrumb-item active">Generate Reciept</li>
      </ol>
 
- 
+
 <%= form_for @receipt   do |form| %>
 
 
@@ -56,7 +107,7 @@
           <td> <%= form.label :tution_fee %> <div class="col">
 
           </div></td>
-       <td><%= form.number_field :tution_fee  %>
+       <td><%= form.number_field :tution_fee, class: 'qty1'  %>
            </td>
 
         </tr>
@@ -64,7 +115,7 @@
       </tr>
       <tr>
           <td><%= form.label :devlopment_fee %></td>
-       <td><%= form.number_field :devlopment_fee  %>
+       <td><%= form.number_field :devlopment_fee , class: 'qty1'  %>
            </td>
 
         </tr>
@@ -73,7 +124,7 @@
             <td> <%= form.label :other_fee %> <div class="col">
 
             </div></td>
-         <td><%= form.number_field :other_fee %>
+         <td><%= form.number_field :other_fee,  class: 'qty1' %>
              </td>
 
           </tr>
@@ -82,7 +133,7 @@
               <td> <%= form.label :total %> <div class="col">
 
               </div></td>
-           <td><%= form.number_field :total %>
+           <td><%= form.number_field :total, class: 'total' ,:readonly => true %>
                </td>
 
             </tr>
@@ -148,3 +199,4 @@
 <%= form.submit %>
 <% end %>
 </div>
+<% end %>
